--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -220,7 +220,7 @@ DataDeltAndetAkt_T %>%
     italic = T, align = "c", font_size = "small", escape = F,
     extra_css = "border:hidden;border-bottom:1.5px solid #111111") %>%
   row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
-  row_spec(which(grepl("Afbud", DataDeltAndetAkt_T$OrdreStatusSimpel_RD)),
+  row_spec(which(grepl("Afbud", DataDeltAndetAkt_T$BilletStatusSimpel_RD)),
            strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
   row_spec(which(DataDeltAndetAkt_T$Nr. == "1"),
            extra_css = "border:hidden;border-top:0.7px solid #111111") %>%
@@ -243,10 +243,10 @@ cat(paste0("<h5 style=font-weight:bold>Klubber</h5>"))
 ```
 
 ```{r}
-#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>% summarise(length(unique(Klub_RD))))+1.5)/3.3
+#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>% summarise(length(unique(Klub_RD))))+1.5)/3.3
 
 DataAkt_T %>% filter(EventAar_RD == InputEventAarAkt_V) %>%
-	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>%
+	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>%
 	mutate(Klub_RD = paste0(Klub_RD, "&emsp;", KlubLogo_DW)) %>%
 	ggplot(mapping = aes(y = fct_rev(fct_infreq(Klub_RD)), fill = BilletKat_DW)) +
 	geom_bar(width = 0.9, position = position_stack(reverse = T)) +
@@ -281,7 +281,7 @@ DataDeltKlubAkt_T %>%
 			caption = "<i style=font-size:80%>Sorteret efter klubantal</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
 	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltKlubAkt_T$OrdreStatusSimpel_RD)),
+	row_spec(which(grepl("Afbud", DataDeltKlubAkt_T$BilletStatusSimpel_RD)),
 					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
@@ -306,7 +306,7 @@ if(nrow(DataAkt_T) == 0) {
 	data.frame() %>% kbl()
 } else {
 	DataAkt_T %>%
-		filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD) & !grepl("Ingen klub|Udlandet", Klub_RD)) %>%
+		filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD) & !grepl("Ingen klub|Udlandet", Klub_RD)) %>%
 		mutate(across("KlubPostnr_RD", \(x) as.integer(x))) %>%
 		distinct(DeltID_RD, .keep_all = T) %>%
 		mutate(KlubRegion_RD = case_when(
@@ -351,7 +351,7 @@ DataDeltByAkt_T %>%
 			caption = "<i style=font-size:80%>Sorteret efter region og postnr.</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
 	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltByAkt_T$OrdreStatusSimpel_RD)),
+	row_spec(which(grepl("Afbud", DataDeltByAkt_T$BilletStatusSimpel_RD)),
 					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
@@ -371,9 +371,9 @@ cat(paste0("<h5 style=font-weight:bold>Aldersgrupper</h5>"))
 ```
 
 ```{r}
-#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>% summarise(length(unique(DeltAlderKat_RD))))+1.5)/3.3
+#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>% summarise(length(unique(DeltAlderKat_RD))))+1.5)/3.3
 DataAkt_T %>%
-	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>%
+	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>%
 	ggplot(mapping = aes(y = fct_rev(DeltAlderKat_RD), fill = BilletKat_DW)) +
 	geom_bar(width = 0.9, position = position_stack(reverse = T)) +
 	geom_text(aes(label = after_stat(count)), stat = "count", position = position_stack(reverse = T),
@@ -406,7 +406,7 @@ DataDeltAlderKatAkt_T %>%
 			caption = "<i style=font-size:80%>Sorteret efter fødselsdato</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
 	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltAlderKatAkt_T$OrdreStatusSimpel_RD)),
+	row_spec(which(grepl("Afbud", DataDeltAlderKatAkt_T$BilletStatusSimpel_RD)),
 					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
@@ -426,10 +426,10 @@ cat(paste0("<h5 style=font-weight:bold>Køn</h5>"))
 ```
 
 ```{r}
-#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>% summarise(length(unique(DeltKoen_RD))))+1.5)/3.3
+#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>% summarise(length(unique(DeltKoen_RD))))+1.5)/3.3
 
 DataAkt_T %>%
-	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>%
+	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>%
 	ggplot(mapping = aes(y = fct_rev(fct_infreq(DeltKoen_RD)), fill = BilletKat_DW)) +
 	geom_bar(width = 0.9, position = position_stack(reverse = T)) +
 	geom_text(aes(label = after_stat(count)), stat = "count", position = position_stack(reverse = T),
@@ -455,7 +455,7 @@ DataDeltKoenAkt_T %>%
 			caption = "<i style=font-size:80%>Sorteret efter køn</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
 	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltKoenAkt_T$OrdreStatusSimpel_RD)),
+	row_spec(which(grepl("Afbud", DataDeltKoenAkt_T$BilletStatusSimpel_RD)),
 					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(3, width_min = "5em") %>%
@@ -476,9 +476,9 @@ cat(paste0("<h5 style=font-weight:bold>Gentilmeldinger</h5>"))
 ```
 
 ```{r}
-#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>% summarise(length(unique(DeltGenKat_DW))))+1.5)/3.3
+#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>% summarise(length(unique(DeltGenKat_DW))))+1.5)/3.3
 DataAkt_T %>%
-	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", OrdreStatusSimpel_RD)) %>%
+	filter(!is.na(DeltID_RD) & grepl("Tilmeldt", BilletStatusSimpel_RD)) %>%
 	ggplot(mapping = aes(y = fct_rev(DeltGen_DW), fill = BilletKat_DW)) +
 	geom_bar(width = 0.9, position = position_stack(reverse = T)) +
 	geom_text(aes(label = after_stat(count)), stat = "count", position = position_stack(reverse = T),
@@ -504,7 +504,7 @@ DataDeltGenTilAkt_T %>%
 			caption = "<i style=font-size:80%>Sorteret efter antal gentilmeldinger</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
 	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltGenTilAkt_T$OrdreStatusSimpel_RD)),
+	row_spec(which(grepl("Afbud", DataDeltGenTilAkt_T$BilletStatusSimpel_RD)),
 					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
@@ -524,10 +524,10 @@ cat(paste0("<h5 style=font-weight:bold>Deltagere</h5>"))
 ```
 
 ```{r}
-#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD)) %>% summarise(length(unique(OrdreKat_DW))))+1.5)/3.3
+#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD)) %>% summarise(length(unique(BilletTilKat_DW))))+1.5)/3.3
 DataAkt_T %>%
   filter(!is.na(DeltID_RD)) %>%
-  ggplot(mapping = aes(y = fct_rev(OrdreKat_DW), fill = BilletKat_DW)) +
+  ggplot(mapping = aes(y = fct_rev(BilletTilKat_DW), fill = BilletKat_DW)) +
   geom_bar(width = 0.9, position = position_stack(reverse = TRUE)) +
   geom_text(aes(label = after_stat(count)), stat = "count", position = position_stack(reverse = TRUE),
             vjust = 0.4, hjust = 1, size = 5, color = "#FFFFFF", fontface = "bold") +
@@ -559,7 +559,7 @@ DataDeltOrdreKatAkt_T %>%
 			caption = "<i style=font-size:80%>Sorteret efter ældste <q>første ordredato</q></i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
 	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
-	row_spec(which(grepl("Afbud", DataDeltOrdreKatAkt_T$OrdreStatusSimpel_RD)),
+	row_spec(which(grepl("Afbud", DataDeltOrdreKatAkt_T$BilletStatusSimpel_RD)),
 					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(3, width_min = "7em") %>%
