--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -125,8 +125,8 @@ if(nrow(DataPraemieYngstAeldstAkt_T) == 0) {
     column_spec(1, bold = T) %>%
     column_spec(1:4, extra_css = "border-top:0.7px solid #999999") %>%
     footnote(ifelse(
-      DataBilletAkt_T$StatAlderForskelAntal_DW == 0, "<i style=font-size:80%>Ingen aldersforskel.</i>",
-      paste("<i style=font-size:80%>Aldersforskel", DataBilletAkt_T$StatAlderForskelAntal_DW, "år.</i>")),
+      DataBilletAkt_T$DeltAlderForskelAntal_DW == 0, "<i style=font-size:80%>Ingen aldersforskel.</i>",
+      paste("<i style=font-size:80%>Aldersforskel", DataBilletAkt_T$DeltAlderForskelAntal_DW, "år.</i>")),
       general_title = "", escape = F) %>%
     remove_column(5) %>%
     gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
@@ -524,10 +524,10 @@ cat(paste0("<h5 style=font-weight:bold>Deltagere</h5>"))
 ```
 
 ```{r}
-#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD)) %>% summarise(length(unique(OrdreTilKat_DW))))+1.5)/3.3
+#| fig-height: !expr (as.numeric(DataAkt_T %>% filter(!is.na(DeltID_RD)) %>% summarise(length(unique(OrdreKat_DW))))+1.5)/3.3
 DataAkt_T %>%
   filter(!is.na(DeltID_RD)) %>%
-  ggplot(mapping = aes(y = fct_rev(OrdreTilKat_DW), fill = BilletKat_DW)) +
+  ggplot(mapping = aes(y = fct_rev(OrdreKat_DW), fill = BilletKat_DW)) +
   geom_bar(width = 0.9, position = position_stack(reverse = TRUE)) +
   geom_text(aes(label = after_stat(count)), stat = "count", position = position_stack(reverse = TRUE),
             vjust = 0.4, hjust = 1, size = 5, color = "#FFFFFF", fontface = "bold") +
