--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -125,11 +125,10 @@ if(nrow(DataPraemieYngstAeldstAkt_T) == 0) {
     column_spec(1, bold = T) %>%
     column_spec(1:4, extra_css = "border-top:0.7px solid #999999") %>%
     footnote(ifelse(
-      DataBilletAkt_T$DeltAlderForskelAntal_DW == 0, "<i style=font-size:80%>Ingen aldersforskel.</i>",
-      paste("<i style=font-size:80%>Aldersforskel", DataBilletAkt_T$DeltAlderForskelAntal_DW, "år.</i>")),
+      DataBilletAkt_T$StatAlderForskelAntal_DW == 0, "<i style=font-size:80%>Ingen aldersforskel.</i>",
+      paste("<i style=font-size:80%>Aldersforskel", DataBilletAkt_T$StatAlderForskelAntal_DW, "år.</i>")),
       general_title = "", escape = F) %>%
-    remove_column(5) %>%
-    gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+    remove_column(5)
 }
 ```
 
@@ -151,8 +150,8 @@ if(InputInfo1234_V %in% c(3)) {
   if(nrow(DataDeltForAkt_T) == 0) {
   data.frame() %>% kbl()
 } else {
-DataDeltForAkt_T %>%
-  kbl(table.attr = "data-quarto-disable-processing=true",
+  DataDeltForAkt_T %>%
+    kbl(table.attr = "data-quarto-disable-processing=true",
       col.names = NA, align = "ccl", escape = F,
       caption = paste0(
         IkonPerson_V, " <b>Foreløbige deltagere</b>",
@@ -167,17 +166,16 @@ DataDeltForAkt_T %>%
     extra_css = "border:hidden;border-bottom:1.5px solid #111111") %>%
   row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
 	column_spec(1:4, extra_css = "border-top:0.7px solid #999999") %>%
-  remove_column(4:8) %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
-}
+  remove_column(4:8)
+  }
 }
 
 if(InputInfo1234_V %in% c(1, 2, 4)) {
   if(nrow(DataDeltPuljerAkt_T) == 0) {
   data.frame() %>% kbl()
 } else {
-DataDeltPuljerAkt_T %>%
-  kbl(table.attr = "data-quarto-disable-processing=true",
+  DataDeltPuljerAkt_T %>%
+    kbl(table.attr = "data-quarto-disable-processing=true",
       col.names = NA, align = "cclr", escape = F,
       caption = paste0(
         "<b>", IkonPingPong_V, " ",
@@ -200,8 +198,7 @@ DataDeltPuljerAkt_T %>%
   row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
   row_spec(which(DataDeltPuljerAkt_T$DeltSnakeSeedLagNr_DW == "1"), bold = T,
            extra_css = "border:hidden;border-top:0.7px solid #111111") %>%
-  remove_column(5:10) %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+  remove_column(5:10)
   }
 }
 
@@ -210,8 +207,8 @@ if(InputInfo1234_V %in% c(1, 2, 3, 4)) {
   if(nrow(DataDeltAndetAkt_T) == 0) {
   data.frame() %>% kbl()
 } else {
-DataDeltAndetAkt_T %>%
-  kbl(table.attr = "data-quarto-disable-processing=true",
+  DataDeltAndetAkt_T %>%
+    kbl(table.attr = "data-quarto-disable-processing=true",
       col.names = NA, align = "ccl", escape = F,
   		caption = "Andet end Ping Pong + evt. afbud") %>%
   kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
@@ -224,9 +221,8 @@ DataDeltAndetAkt_T %>%
            strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
   row_spec(which(DataDeltAndetAkt_T$Nr. == "1"),
            extra_css = "border:hidden;border-top:0.7px solid #111111") %>%
-  remove_column(4:5) %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
-}
+  remove_column(4:5)
+  }
 }
 ```
 
@@ -589,7 +585,6 @@ if(nrow(DataResultSidsteEventAkt_T) == 0) {
 	remove_column(4:10) %>%
 	footnote(
 		paste0(""),
-		general_title = "", escape = F) %>%
-  gsub("\\{\\{&lt;|&lt;", "{{<", .) %>% gsub("&gt;}}", ">}}", .)
+		general_title = "", escape = F)
 }
 ```
